--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "12.6.1"
+    "node": "12.x"
   },
   "dependencies": {
     "cors": "^2.8.5",
