--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "node": "12.x"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.6",
+    "db-migrate-pg": "^0.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-prettify": "^0.1.1",
     "helmet": "^3.22.0",
     "json-beautify": "^1.1.1",
-    "pg": "^8.0.3",
-    "db-migrate": "^0.11.6",
-    "db-migrate-pg": "^0.5.1"
+    "pg": "^8.0.3"
   }
 }
